# netlist-analyzer

./: CMakeLists.txt  Makefile  README.md  TODO  endnode.h  main.cc  program_state.cc  program_state.h
constraints/: Makefile  constraint_clock.cc  constraint_clock.h  constraints.cc  constraints.h
input/: Makefile
input/liberty/: Makefile  liberty.cc  liberty.h  liberty_cell.cc  liberty_cell.h  liberty_parser.l  liberty_parser.y  liberty_pin.cc  liberty_pin.h  lutable.cc  lutable.h  lutable_numbers.cc  lutable_numbers.h
input/verilog/: Makefile  connection_builder.cc  connection_builder.h  range_type.h  verilog_assignment.cc  verilog_assignment.h  verilog_connection.cc  verilog_connection.h  verilog_design.cc  verilog_design.h  verilog_instance.cc  verilog_instance.h  verilog_module.cc  verilog_module.h  verilog_net.cc  verilog_net.h  verilog_parser.l  verilog_parser.y  verilog_preprocess.cc
scripts/python-gdsii/: README  gds2txt  gds2yaml  read_lib.py  txt2gds
tclembed/: Makefile  interpreter.cc  interpreter.h
tests/: CMakeLists.txt  Makefile  check_memory_leak.sh  test1.cc
timing/: Makefile  timing_node.cc  timing_node.h  timing_path.cc  timing_path.h
